# flask-mailman

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  dev.yml  preview.yml  release.yml
changelog/: index.html
contributing/: index.html
docs/: index.md  release-notes.md
flask_mailman/: __init__.py  message.py  utils.py
flask_mailman/backends/: base.py  console.py  dummy.py  file.py  filebased.py  locmem.py  sendgrid.py  smtp.py
flask_mailman/error/: __init__.py
release-notes/: index.html
search/: search_index.json
tests/: __init__.py  test_backend.py  test_connection.py  test_global_state.py  test_import_backend.py  test_initialization.py  test_mail.py  test_message.py  tests.py
tests/attachments/: file.txt
