[tool.poetry]
name = "Flask-Mailman"
version = "0.2.0"
description = "Porting Django's email implementation to your Flask applications."
authors = ["Waynerv <ampedee@gmail.com>"]
license = "BSD-3-Clause"
readme="README.md"
repository="https://github.com/waynerv/flask-mailman"
keywords=["flask", "mail", "smtp", "flask-mail"]
exclude = ["docs", "tests*"]
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Framework :: Flask",
        "Topic :: Software Development :: Build Tools",
        "Topic :: Communications :: Email",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
    ]

[tool.poetry.dependencies]
python = "^3.5"
flask = "^1.0"


[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^5.3"
mkdocs-material = "^6.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
